# azure-ai-content-understanding-python

./: README.md  azure.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: README.md  auto_review_documentation.yml  notebook_check.yml  test.MD  test_actions.yml
analyzer_templates/: audio_transcription.json  call_recording_analytics.json  call_recording_analytics_text.json  content_document.json  content_video.json  conversational_audio_analytics.json  face_aware_in_video.json  image_chart.json  invoice.json  invoice_field_source.json  marketing_video.json  marketing_video_segmenation_auto.json  marketing_video_segmenation_custom.json  receipt.json  video_chapters_dynamic.json  video_chapters_structured.json
azure-ai-content-understanding-csharp/: azure-ai-content-understanding-csharp.sln
azure-ai-content-understanding-csharp/notebooksc#/: analyzer_training.cs  buildpersondirectory.cs  contentextraction.cs  conversational_field_extraction.cs  field_extraction.cs  management.cs
docs/: create_azure_ai_service.md  set_env_for_training_data_and_reference_doc.md
infra/: main.bicep  write_dot_env.ps1  write_dot_env.sh
notebooks/: .env.sample  analyzer_training.ipynb  build_person_directory.ipynb  classifier.ipynb  content_extraction.ipynb  conversational_field_extraction.ipynb  field_extraction.ipynb  field_extraction_pro_mode.ipynb  management.ipynb  video_chapters_creation.ipynb
python/: content_understanding_client.py
python/di_to_cu_migration_tool/: .sample_env  (+14 more)
tools/: .env.sample  README.md  review_file.py  test_notebooks.py
(+21 files in other folders)
